Fixed background stretch. Adjusted CSS

--- a/public/screen.css
+++ b/public/screen.css
@@ -8,6 +8,8 @@ html {
 
 body {
   background-image: url("images/fcbarca.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   margin: 0;
   min-height: 100%;
   display: flex;
@@ -24,6 +26,7 @@ html {
 
 h1 {
   background-color: rgb(248, 115, 115, 0.808);
+  font-size: 60px;
   border: red solid 2px;
   border-radius: 15px 15px 15px 15px;
   padding-top: 3rem;
@@ -41,6 +44,7 @@ h1 {
   justify-content: space-around;
   width: 100%;
   height: 75%;
+  font-size: 20px;
 }
 
 .team {
@@ -49,7 +53,13 @@ h1 {
   align-items: center;
   flex-direction: column;
   justify-content: space-around;
-  padding: 0.5rem;
+  padding: 5rem;
+  margin: -1rem;
+}
+
+.TeamButtons {
+
+  padding: 1rem;
 }
 
 .resetbox {
